fix navbar buttons alignments

--- a/blog-app-2-frontend/src/components/Navigation/Navigation.module.css
+++ b/blog-app-2-frontend/src/components/Navigation/Navigation.module.css
@@ -5,6 +5,3 @@ button i {
 button, input {
   height: 35px;
 }
-.nav-link {
-    padding: auto;
-}
